minor bug where i had accidentially assigned the beginning elevation instead of the ending elevation for a given time-window to a counter variable. this created a major glitch where pulsar visibility was incorrectly calculated

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,7 @@ body{
     width: 40%;
     margin-top: 2%;
     font-size: 3vh;
+    color: white;
 }
 
 .obsLink a{
